test/T2/Pass/T2_badSemantic.ic
class Class {
	void main(){
		int x = new int [5];
	}
}
