test/T2/Fail/T2_noSemi.ic
class Test{
	void foo(){
		int x = 1
	}
}